functions to find / run fiji

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bunzip2)
 export(lsm_metadata)
 export(quickhash)
 export(quickhash.lsm)
+export(runFijiMacro)
 import(bftools)
 import(digest)
 importFrom(nat.utils,RunCmdForNewerInput)
