teach parse_key_lsm_metadata to accept lsm path as input
* used to try and parse the lsm file - not very clever

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,4 @@ import(bftools)
 import(digest)
 importFrom(nat.utils,RunCmdForNewerInput)
 importFrom(nat.utils,makelock)
+importFrom(tools,file_ext)
