First version of skeletonisation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(parse_key_lsm_metadata)
 export(quickhash)
 export(quickhash.lsm)
 export(runFijiMacro)
+export(skeletonise_nrrds)
 import(bftools)
 import(digest)
 importFrom(nat.utils,RunCmdForNewerInput)
