--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,12 @@ Package: jimpipeline
 Type: Package
 Title: Package to wrap Jefferis lab image processing / registration pipeline
 Version: 1.0
-Date: 2015-01-16
-Author: Gregory Jefferis <jefferis@gmail.com>
-Maintainer: Gregory Jefferis <jefferis@gmail.com>
+Authors@R: 
+    person(given = "Gregory",
+           family = "Jefferis",
+           role = c("aut", "cre"),
+           email = "jefferis@gmail.com",
+           comment = c(ORCID = "0000-0002-0587-9355"))
 Description: This will contain functions that we use during our large scale
     image processing and registration work. We will try to make these as
     generic as possible, but for the moment use by third parties is not a major
