--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ deploy:
   provider: script
   script: Rscript -e 'pkgdown::deploy_site_github()'
   skip_cleanup: true
+env:
+  global:
+    - RGL_USE_NULL=TRUE
+    - _R_CHECK_DONTTEST_EXAMPLES_=FALSE
